FIx menu button on iOS devices

--- a/src/modules/logo_page/style.css
+++ b/src/modules/logo_page/style.css
@@ -22,7 +22,7 @@
 .button {
 	height: 40px;
 	min-width: 40px;
-	padding: 0 15px;
+	padding: 0 8px;
 	line-height: 40px;
 	font-size: 20px;
 	background: linear-gradient(90deg, var(--color-left), var(--color-right));
@@ -35,6 +35,7 @@
 	display: inline-block;
 	margin: 0 5px;
 	cursor: pointer;
+	user-select: none;
 	box-shadow: var(--color-shadow) 0px 0px 0px;
 	transition: box-shadow .2s;
 	&:hover {
